--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <body><h1> Welcome to the world
   
- <jancukkkkkkkkkkkkkkkkkkkkkkk>
-   <p>Danang bajingan</p>
+ <kkkkkkkkkkkkkkkkkkkkkkk>
+   <p>Danang</p>
 </body>
 </html>
